--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/center_layout"
+
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -28,22 +29,21 @@
             android:layout_height="match_parent"
             android:id="@+id/center_image"
             android:contentDescription="@string/app_name"
+
             android:layout_centerHorizontal="true"
             android:layout_above="@+id/description_label"/>
 
         <TextView
-            android:layout_margin="@dimen/margin_medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/description_label"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:text="sample text, description will go here"
             android:textStyle="italic"
             android:textColor="@color/descriptionText"
-            android:textSize="@dimen/description_font_size"/>
+            android:textSize="@dimen/description_font_size"
 
-
+            android:layout_margin="@dimen/margin_medium"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
