--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,16 +8,17 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.iboism.kotlinplayground.MainActivity"
     tools:showIn="@layout/activity_main"
-    android:paddingBottom="@dimen/margin_larger"
-    android:paddingTop="@dimen/margin_large"
-    android:paddingRight="@dimen/margin_medium"
-    android:paddingLeft="@dimen/margin_medium"
     android:background="@color/background">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/center_layout"
+
+        android:layout_marginBottom="@dimen/margin_larger"
+        android:layout_marginTop="@dimen/margin_large"
+        android:layout_marginRight="@dimen/margin_medium"
+        android:layout_marginLeft="@dimen/margin_medium"
 
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -34,6 +35,8 @@
             android:layout_above="@+id/description_label"/>
 
         <TextView
+            android:shadowRadius="5"
+            android:elevation="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/description_label"
