--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,43 +9,35 @@
     tools:context="com.iboism.kotlinplayground.MainActivity"
     android:background="@color/background">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/center_layout"
-
-        android:layout_marginBottom="@dimen/margin_larger"
-        android:layout_marginTop="@dimen/margin_large"
-        android:layout_marginRight="@dimen/margin_medium"
-        android:layout_marginLeft="@dimen/margin_medium"
-
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:id="@+id/center_image"
-            android:contentDescription="@string/app_name"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
 
-            android:layout_centerHorizontal="true"
-            android:layout_above="@+id/description_label"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/description_label"
+            android:layout_marginBottom="@dimen/margin_medium"
+
+            android:scaleType="centerCrop"
+            android:contentDescription="@string/app_name" />
 
         <TextView
-            android:shadowRadius="5"
-            android:elevation="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/description_label"
-            android:textStyle="italic"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:elevation="5dp"
+            android:shadowRadius="5"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="@dimen/margin_medium"
+            android:layout_marginHorizontal="@dimen/margin_large"
+
             android:textColor="@color/descriptionText"
             android:textSize="@dimen/description_font_size"
-
-            android:layout_margin="@dimen/margin_medium"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"/>
-    </RelativeLayout>
+            android:textStyle="italic" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
